# metahackathonround-01

./: Dockerfile  README.md  explore_openenv.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: main.yml  sync_to_huggingface.yml
server/: app.py  env.py
